--- a/PORTFOLIO PROJECT/style.css
+++ b/PORTFOLIO PROJECT/style.css
@@ -55,7 +55,7 @@ body {
   box-sizing: border-box;
   height: 100%;
   font-family: "Jetbrains Mono", monospace;
-  background: var(--color-dark-bg)!important;
+  background: var(--color-dark-bg);
 }
 
 html {
@@ -75,20 +75,39 @@ html:focus {
   left: 0;
   height: 100%;
   width: 100%;
-  background: var(--color-dark-bg);
-  border-left: 4px solid rebeccapurple;
-  animation: animate 4s steps(12) infinite;
+} 
+
+.text.sec-text { /* Add this line */
+  position: relative; /* Add this line */
+  font-family: monospace;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0;
+  letter-spacing: 0.15em;
+}
+.text.sec-text::after { /* Add this block */
+  content: ''; /* Empty content */
+  position: absolute;
+  bottom: 0; /* Adjust as needed */
+  right: -0.15em; /* Adjust as needed */
+  height: 1.4em; /* Adjust as needed */
+  width: 0.2em; /* Adjust as needed */
+  background-color: red;
+  animation: blink-caret 0.75s step-end infinite;
 }
 
-@keyframes animate {
-  40%,
-  60% {
-    left: 100%;
-  }
-  100% {
-    left: 0%;
-  }
+@keyframes blink-caret {
+  from, to { background-color: transparent; }
 }
+.text {
+  border-right: 4px solid var(--color-dark-accent); 
+}
+
+.border-color {
+  border-color: var(--color-light-accent); /* Border color when the button is toggled */
+}
+
+
 /* ---------------------------------------- */
 .hero {
   box-sizing: border-box;
@@ -100,12 +119,18 @@ html:focus {
   flex-direction: column;
   z-index: 1;
 }
+
+
 .hero-title {
-  font-size: -1.1vh;
+  font-size: 3.1em;
   font-weight: 400;
   margin-bottom: 0.4em;
   letter-spacing: 0.1em;
 }
+/* .intro-name{
+  letter-spacing: 0.1em;
+  font-size: 3.1em;
+} */
 .intro-para {
   text-align: justify;
   font-size: 1.1em;
@@ -405,6 +430,12 @@ a.btn-1{
   width: 100%;
   gap: 2.2rem;
 }
+
+.social-elem {
+  z-index: 5;
+  padding: 5px;
+}
+
 .footer-mesg {
   font-family: "Jetbrains Mono", monospace;
   font-size: 2.2vh;
@@ -740,6 +771,8 @@ color: var(--color-dark-accent);
   font-size: 2.5em;
   padding-bottom: 0.3em;
   color: var(--color-dark-font);
+    margin-left: 1.6rem;
+  
 }
 
 
@@ -792,32 +825,15 @@ p {
 }
  
 
-sec-text{
-  background:red;
-}
+
 
 
 /* **z-index property** */
-.modal-content-root {
-
-  /* z-index: 9999;  */
-  /* Higher z-index to appear above other elements */
-}
 
 .entire-container {
   position: relative;
 }
 
-.modal-content-root {
-  /* position: relative;
-  z-index: 100; */
-}
-
-.modal-image-overlay {
-  /* Existing styles... */
-  /* z-index: 99;  */
-  /* Set a lower z-index value than the modal */
-}
 
 .close-modal {
   position: absolute;
@@ -831,8 +847,3 @@ sec-text{
   text-align: center;
 }
 
-.modal-image {
-  width: 100%;
-  /* max-height: 300px; */
-  /* object-fit: cover; */
-  border-radius: 4px;}
